package valueit.co.jp.reversi.domain.model.disk;

public enum Side {
    dark, light
}
